# mlsys_course_project

./: .gitignore  DECODE_EXPLORATION.md  README.md  data_collection_plan.md  environment.yml  pyproject.toml  requirements.txt  research_review.md  two_week_execution_plan.md
docs/: README.md  methods.md  plan.md  related-work.md  results.md
results/: DECODE_STORY.md  EXPERIMENTS.md  PREDICT_DEMO.md  RQ2_RQ3_5gpu.md  SHAP_FINDINGS.md  decode_leave_model_out.json  decode_summary.md  leave_gpu_a100_gat_e50.json  leave_gpu_a10_gat_e50.json  leave_gpu_b200_gat_e50.json  leave_gpu_h100_gat_e100__h128_L3.json  leave_gpu_h100_gat_e50.json  leave_gpu_h100_gat_e50__no_gskip.json  leave_gpu_h100_gat_e50__no_node_sh.json  leave_gpu_h100_gat_e50__ro_mean_max.json  leave_gpu_l4_gat_e50.json  leave_model_bert_base_gat_e50.json  leave_model_bert_large_gat_e50.json  leave_model_gpt2_large_gat_e50.json  leave_model_gpt2_large_gat_e50__no_node_sh_no_gskip.json  leave_model_gpt2_large_gat_e50__no_node_sh_ro_mean_max.json  leave_model_gpt2_large_gat_e50__no_node_sh_ro_mean_max_no_gskip.json  leave_model_gpt2_large_gat_e50__ro_mean_max_no_gskip.json  leave_model_gpt2_medium_gat_e50.json  leave_model_gpt2_small_gat_e50.json  leave_model_t5_small_gat_e50.json  mixed_gpt2_small,gpt2_large_gat_e30.json  mixed_split_router.json  random_gat_e100__h128_L3.json  random_gat_e5.json  random_gat_e50.json  random_gat_e50__rank0.0.json  random_gat_e50__rank1.0.json  zero_shot_b200_gat_e50.json  zero_shot_b200_gat_e50__fs100.json  zero_shot_b200_gat_e50__fs200.json  zero_shot_b200_gat_e50__fs50.json  (+2 more)
(+66 files in other folders)
